@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-12T16:33:46Z",
-  "count_outdated" : 576,
-  "uniques_outdated" : 331,
-  "count" : 598,
+  "timestamp" : "2022-10-13T01:46:25Z",
+  "count_outdated" : 579,
+  "uniques_outdated" : 332,
+  "count" : 600,
   "uniques" : 343,
   "clones" : [
-    {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-29T00:00:00Z",
       "count": 2,
