@@ -1,12 +1,7 @@
 {
-  "count": 22,
+  "count": 21,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-09-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-29T00:00:00Z",
       "count": 2,
